# superspreader

./: .clang-format  .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Doxyfile  README.md  compose.dev.yml  graph_legend.html  index.html  md_README.html  pages.html
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yaml  docker.yaml  format.yaml  rust.yaml
arduino/: CMakeLists.txt
arduino/board_tester/: board_tester.ino
arduino/cat/: cat.ino
arduino/cmake/: superspreaderConfig.cmake.in
arduino/health_monitor/: health_monitor.ino  health_monitor_core.cpp  health_monitor_core.h  static_ring_buffer.h
arduino/test/: CMakeLists.txt  gtest-main.cc  health_monitor_core_test.cpp
ble_test/: ble_test.ino
board_test/: board_test.ino
bracelet/: bracelet.ino
cat/: cat.ino
client_server_test/: client_server_test.ino
doc/: 0_getting_started.md  mainpage.md
health_monitor/: health_monitor.ino  health_monitor_core.cpp  health_monitor_core.h
pwm_test/: pwm_test.ino
scripts/: game_rules.py  game_rules_2.py  game_test.py  light_rules.py  treatment_rules.py
search/: all_0.js  pages_0.js
ss-sim/: Cargo.toml
ss-sim/src/: player.rs
wifi_test/: wifi_test.ino
